Address Lab3 code review findings